import java.awt.*;

public interface IFrame {
    void paintComponent(Graphics g);
}
