public interface iTurbo {
    public void setTurboOn();
    public void setTurboOff();
}
