@startuml

title __DIT953-LAB1's Class Diagram__\n

  namespace  {
    class CarController {
    }
  }
  

  namespace  {
    class CarModel {
    }
  }
  

  namespace  {
    class CarTransporter {
    }
  }
  

  namespace  {
    class CarView {
    }
  }
  

  namespace  {
    class Cargo {
    }
  }
  

  namespace  {
    class CargoFirstOut {
    }
  }
  

  namespace  {
    abstract class CargoTransporter {
    }
  }
  

  namespace  {
    class DrawPanel {
    }
  }
  

  namespace  {
    class Engine {
    }
  }
  

  namespace  {
    class Ferry {
    }
  }
  

  namespace  {
    interface ICarModel {
    }
  }
  

  namespace  {
    interface IController {
    }
  }
  

  namespace  {
    interface IDriveable {
    }
  }
  

  namespace  {
    interface IFerryCargo {
    }
  }
  

  namespace  {
    interface IFrame {
    }
  }
  

  namespace  {
    interface IMovable {
    }
  }
  

  namespace  {
    interface IPositionable {
    }
  }
  

  namespace  {
    interface IPositionablePicture {
    }
  }
  

  namespace  {
    interface ISignalObserver {
    }
  }
  

  namespace  {
    interface ITransporter {
    }
  }
  

  namespace  {
    interface ITruckCargo {
    }
  }
  

  namespace  {
    interface ITurbo {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Motion {
    }
  }
  

  namespace  {
    abstract class Motorized {
    }
  }
  

  namespace  {
    abstract class PersonCar {
    }
  }
  

  namespace  {
    class Position {
    }
  }
  

  namespace  {
    class PositionablePicture {
    }
  }
  

  namespace  {
    class Ramp {
    }
  }
  

  namespace  {
    class RampBool {
    }
  }
  

  namespace  {
    class RepairCenter {
    }
  }
  

  namespace  {
    class Saab95 {
    }
  }
  

  namespace  {
    class Scania {
    }
  }
  

  namespace  {
    abstract class Transporter {
    }
  }
  

  namespace  {
    class TrimEngine {
    }
  }
  

  namespace  {
    abstract class Truck {
    }
  }
  

  namespace  {
    class TurboEngine {
    }
  }
  

  namespace  {
    class VehicleFactory {
    }
  }
  

  namespace  {
    class Volvo240 {
    }
  }
  

  CarController .up.|> IController
  CarController o-- ICarModel : model
  CarController o-- ISignalObserver : view
  CarModel .up.|> ICarModel
  CarModel .up.|> java.awt.event.ActionListener
  CarTransporter -up-|> CargoTransporter
  CarView .up.|> ISignalObserver
  CarView -up-|> javax.swing.JFrame
  CarView o-- DrawPanel : drawPanel
  CargoFirstOut -up-|> Cargo
  CargoTransporter -up-|> Transporter
  DrawPanel -up-|> javax.swing.JPanel
  Ferry -up-|> CargoTransporter
  Motion o-- Position : pos
  Motorized .up.|> IDriveable
  Motorized o-- E : engine
  Motorized o-- Motion : motion
  PersonCar .up.|> ITruckCargo
  PersonCar -up-|> Motorized
  PositionablePicture .up.|> IPositionablePicture
  PositionablePicture o-- Position : position
  RampBool -up-|> Ramp
  Saab95 .up.|> ITurbo
  Saab95 -up-|> PersonCar
  Scania -up-|> Truck
  Transporter .up.|> ITransporter
  Transporter -up-|> Motorized
  Transporter o-- Ramp : ramp
  TrimEngine -up-|> Engine
  Truck .up.|> IFerryCargo
  Truck -up-|> Transporter
  TurboEngine -up-|> Engine
  Volvo240 -up-|> PersonCar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
